added model loading and scaffolding, UI adjustments, code clean up
